FIXED: Modal windows render behind content on Safari (#27)
* removed redundant CSS

* bug fix: fixed modal window not rendering on Safari

* bug fix: Initial Cases and Interventions modals render correctly on Safari

---------

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -164,16 +164,8 @@ th {
   color: #dfa53d;
 }
 
-
-.parameters-form {
-  margin-top: 20px;
-  position: relative;
-  z-index: 1000;
-}
-
 .dropdown-section {
   margin-bottom: 20px;
-
 }
 
 .dropdown-section button {
