--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -49,17 +49,16 @@ code {
   z-index: 20000; /* Ensure the z-index is high enough */
 }
 
-.modal-content {
+/*.modal-content {
   background-color: white;
   padding: 20px;
   border-radius: 8px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-  max-width: 500px;
-  width: 100%;
-  position: relative;
+  max-width: 600px;
+  width: 90%;
   z-index: 10001;
   overflow-y: auto;
-}
+}*/
 
 .modal-close {
   position: absolute;
